
vphy_v1_7:
Added new files: xvphy_gtye4.c, xvphy_mmcme2.c, xvphy_mmcme3.c & xvphy_mmcme4.c
Added GTYE4 Support for HDMI
Migrated MMCM reconfig from RTL to SW driver
Added new APIs: XVphy_SetPolarity, XVphy_SetPrbsSel, XVphy_TxPrbsForceError
Added 8.1 Gbps support in DP
Corrected FVCO range for MMCME4 in xvphy_hdmi.h
Updated US/US+ QPLL0 VCO MAX to 16.375 GHz (GTHE3/GTHE4)
Removed XVphy_DruSetGain API in xvphy_hdmi.c
Changed line comments from // to /* */
Added N2=8 divider for CPLL for US & US+ devices
Added maximum userclk checking in PLL parameter computation

vprocss_v2_1:
Added new version 2.1
Added optional color format conversion handling in scaler only topology
Updated tcl to support multiple instances

wdttb_v4_0:
Updated Window watchdog support.
Updated XWdtTb_Config structure with Window WDT parameters.
Updated XWdtTb core structure with config parameter and removed RegBaseAddress parameter.
Added following static inline functions:
XWdtTb_GetTbValue, XWdtTb_SetRegSpaceAccessMode,
XWdtTb_GetRegSpaceAccessMode, XWdtTb_GetLastEvent,
XWdtTb_GetFailCounter, XWdtTb_IsResetPending,
XWdtTb_GetIntrStatus, XWdtTb_IsWrongCfg.
Added following functions:
XWdtTb_AlwaysEnable, XWdtTb_ClearLastEvent,
XWdtTb_ClearResetPending, XWdtTb_IntrClear,
XWdtTb_SetByteCount, XWdtTb_GetByteCount,
XWdtTb_SetByteSegment, XWdtTb_GetByteSegment,
XWdtTb_EnableSst, XWdtTb_DisableSst, XWdtTb_EnablePsm,
XWdtTb_DisablePsm, XWdtTb_EnableFailCounter,
XWdtTb_DisableFailCounter, XWdtTb_EnableExtraProtection,
XWdtTb_DisableExtraProtection, XWdtTb_SetWindowCount, XWdtTb_CfgInitialize.
Updated following functions with Window WDT feature:
XWdtTb_Start, XWdtTb_Stop, XWdtTb_IsWdtExpired, XWdtTb_RestartWdt.
Changed multi line comments to single line comments wherever required.
Moved XWdtTb_LookupConfig definition to xwdttb_sinit.c.
Changes made to adherence to coding and Doxygen guidelines.
Removed included xil_io, xil_types, xparameters and xil_assert header files.