@@ -18,11 +18,7 @@
  *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-<<<<<<< HEAD
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
-=======
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
->>>>>>> vphy: Initial check-in for 2018.1
  * XILINX  BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF
  * OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
@@ -449,17 +445,10 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	}
 
 
-<<<<<<< HEAD
 	/* Write Power Register Value */
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x28, 0xFFFF);
 
 	/* Write CLKFBOUT Reg1 & Reg2 Values */
-=======
-	//Write Power Register Value
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x28, 0xFFFF);
-
-	//Write CLKFBOUT Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme2DividerEncoding(MMCM_CLKFBOUT_MULT_F,
 						MmcmParams->ClkFbOutMult);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x14,
@@ -467,21 +456,13 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x15,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write DIVCLK_DIVIDE Value */
-=======
-	//Write DIVCLK_DIVIDE Value
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme2DividerEncoding(MMCM_DIVCLK_DIVIDE,
 						MmcmParams->DivClkDivide) ;
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x16,
 						(u16)(DrpVal32 & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write CLKOUT0 Reg1 & Reg2 Values */
-=======
-	//Write CLKOUT0 Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme2DividerEncoding(MMCM_CLKOUT_DIVIDE,
 						MmcmParams->ClkOut0Div);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x08,
@@ -489,11 +470,7 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x09,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write CLKOUT1 Reg1 & Reg2 Values */
-=======
-	//Write CLKOUT1 Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme2DividerEncoding(MMCM_CLKOUT_DIVIDE,
 						MmcmParams->ClkOut1Div);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0A,
@@ -501,11 +478,7 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0B,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write CLKOUT2 Reg1 & Reg2 Values */
-=======
-	//Write CLKOUT2 Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme2DividerEncoding(MMCM_CLKOUT_DIVIDE,
 						MmcmParams->ClkOut2Div);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0C,
@@ -513,7 +486,6 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0D,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 #if (XPAR_VPHY_0_TRANSCEIVER == XVPHY_GTPE2)
 	/* Configure CLKOUT3 if TX is HDMI and is GTPE2 */
 	if (TxIsPlle2 == TRUE) {
@@ -543,24 +515,6 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x4E, 0x0800);
 
 	/* Write Filter Reg2 Value */
-=======
-	//Write Lock Reg1 Value
-	DrpVal = XVphy_Mmcme2LockReg1Encoding(MmcmParams->ClkFbOutMult);
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x18, DrpVal);
-
-	//Write Lock Reg2 Value
-	DrpVal = XVphy_Mmcme2LockReg2Encoding(MmcmParams->ClkFbOutMult);
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x19, DrpVal);
-
-	//Write Lock Reg3 Value
-	DrpVal = XVphy_Mmcme2LockReg3Encoding(MmcmParams->ClkFbOutMult);
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x1A, DrpVal);
-
-	//Write Filter Reg1 Value
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x4E, 0x0800);
-
-	//Write Filter Reg2 Value
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal = XVphy_Mmcme2FilterReg2Encoding(MmcmParams->ClkFbOutMult,
                     TxIsPlle2);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x4F, DrpVal);
