@@ -18,11 +18,7 @@
  *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-<<<<<<< HEAD
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
-=======
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
->>>>>>> vphy: Initial check-in for 2018.1
  * XILINX  BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF
  * OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
@@ -412,17 +408,10 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	}
 
 
-<<<<<<< HEAD
 	/* Write Power Register Value */
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x27, 0xFFFF);
 
 	/* Write CLKFBOUT Reg1 & Reg2 Values */
-=======
-	//Write Power Register Value
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x27, 0xFFFF);
-
-	//Write CLKFBOUT Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme3DividerEncoding(MMCM_CLKFBOUT_MULT_F,
 						MmcmParams->ClkFbOutMult);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x14,
@@ -430,21 +419,13 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x15,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write DIVCLK_DIVIDE Value */
-=======
-	//Write DIVCLK_DIVIDE Value
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme3DividerEncoding(MMCM_DIVCLK_DIVIDE,
 						MmcmParams->DivClkDivide) ;
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x16,
 						(u16)(DrpVal32 & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write CLKOUT0 Reg1 & Reg2 Values */
-=======
-	//Write CLKOUT0 Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme3DividerEncoding(MMCM_CLKOUT_DIVIDE,
 						MmcmParams->ClkOut0Div);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x08,
@@ -452,11 +433,7 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x09,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write CLKOUT1 Reg1 & Reg2 Values */
-=======
-	//Write CLKOUT1 Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme3DividerEncoding(MMCM_CLKOUT_DIVIDE,
 						MmcmParams->ClkOut1Div);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0A,
@@ -464,11 +441,7 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0B,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write CLKOUT2 Reg1 & Reg2 Values */
-=======
-	//Write CLKOUT2 Reg1 & Reg2 Values
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal32 = XVphy_Mmcme3DividerEncoding(MMCM_CLKOUT_DIVIDE,
 						MmcmParams->ClkOut2Div);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0C,
@@ -476,7 +449,6 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x0D,
 						(u16)((DrpVal32 >> 16) & 0xFFFF));
 
-<<<<<<< HEAD
 	/* Write Lock Reg1 Value */
 	DrpVal = XVphy_Mmcme3LockReg1Encoding(MmcmParams->ClkFbOutMult);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x18, DrpVal);
@@ -493,24 +465,6 @@ u32 XVphy_MmcmWriteParameters(XVphy *InstancePtr, u8 QuadId,
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x4E, 0x0800);
 
 	/* Write Filter Reg2 Value */
-=======
-	//Write Lock Reg1 Value
-	DrpVal = XVphy_Mmcme3LockReg1Encoding(MmcmParams->ClkFbOutMult);
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x18, DrpVal);
-
-	//Write Lock Reg2 Value
-	DrpVal = XVphy_Mmcme3LockReg2Encoding(MmcmParams->ClkFbOutMult);
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x19, DrpVal);
-
-	//Write Lock Reg3 Value
-	DrpVal = XVphy_Mmcme3LockReg3Encoding(MmcmParams->ClkFbOutMult);
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x1A, DrpVal);
-
-	//Write Filter Reg1 Value
-	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x4E, 0x0800);
-
-	//Write Filter Reg2 Value
->>>>>>> vphy: Initial check-in for 2018.1
 	DrpVal = XVphy_Mmcme3FilterReg2Encoding(MmcmParams->ClkFbOutMult);
 	XVphy_DrpWr(InstancePtr, QuadId, ChId, 0x4F, DrpVal);
 
